# management

./: README.md
task_manager/: package.xml  readme.md  setup.py
task_manager/task_manager/: bt_manager.py  bt_task_lib.py  bt_task_lib_ros1.py  task_from_topic.py
task_manager_interfaces/: CMakeLists.txt  package.xml
task_manager_interfaces/srv/: AddTask.srv  EvaluateTask.srv  RemoveTask.srv
